# banana-trng

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
python/: main.ipynb
src/: cli.rs  display.rs  geiger.rs  main.rs  storage.rs
src/usb/: cli.rs  mod.rs  uart.rs
