[package]
name = "banana-rng-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { version = "0.2.0", path = "../embassy/embassy-stm32", features = [
    "defmt",
    "stm32f103cb",
    "unstable-pac",
    "memory-x",
    "time-driver-tim3",
    "exti",
] }
embassy-sync = { version = "0.6.2", path = "../embassy/embassy-sync", features = [
    "defmt",
] }
embassy-executor = { version = "0.7.0", path = "../embassy/embassy-executor", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { version = "0.4.0", path = "../embassy/embassy-time", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-usb = { version = "0.4.0", path = "../embassy/embassy-usb", features = [
    "defmt",
] }
embassy-futures = { version = "0.1.0", path = "../embassy/embassy-futures" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
nb = "1.1.0"
static_cell = "2.0.0"
pid = "4.0.0"
ringbuffer = { version = "0.15.0", default-features = false }

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2
