[package]
name = "banana-rng-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { version = "0.2.0", path = "../embassy/embassy-stm32", features = [
    "stm32f103cb",
    "unstable-pac",
    "memory-x",
    "time-driver-tim3",
    "exti",
] }
embassy-sync = { version = "0.6.2", path = "../embassy/embassy-sync" }
embassy-executor = { version = "0.7.0", path = "../embassy/embassy-executor", features = [
    "arch-cortex-m",
    "executor-thread",
] }
embassy-time = { version = "0.4.0", path = "../embassy/embassy-time", features = [
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-usb = { version = "0.4.0", path = "../embassy/embassy-usb" }
embassy-futures = { version = "0.1.0", path = "../embassy/embassy-futures" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
static_cell = "2.0.0"
pid = "4.0.0"
ringbuffer = { version = "0.15.0", default-features = false }

display-interface = "0.5.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }

[dependencies.ssd1306]
version = "0.9.0"
git = "https://github.com/rust-embedded-community/ssd1306.git"
branch = "master"
features = ["async"]

[features]
default = ["defmt"]
defmt = [
    "embassy-stm32/defmt",
    "embassy-sync/defmt",
    "embassy-executor/defmt",
    "embassy-time/defmt",
    "embassy-usb/defmt",
]

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2
